Now can allocated in multi servers

--- a/JSON/botconfig.json
+++ b/JSON/botconfig.json
@@ -1,4 +1,5 @@
 {
-	"rpgcategory":"851195427151151144",
-	"rpgadm":"Cesár"
+	"rpgcategory":"923712293001379890",
+	"rpgadm":"Mestre do Jogo",
+	"serversIds":["923712292527431742", "851194958055735327"]
 }
